corrected footer's spacings

--- a/css/style.css
+++ b/css/style.css
@@ -294,4 +294,15 @@ footer i {
   .sub-block h4 {
     font-size: 1rem;
   }
+
+  footer {
+    padding-bottom: 5%;
+    padding-top: 5%;
+  }
+
+  #copyright {
+    margin-top: 3%;
+    margin-bottom: 0;
+    padding-top: 3%;
+  }
 }
